--- a/index.html
+++ b/index.html
@@ -3,12 +3,57 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-    <title>Starbucks Coffee Korea </title>
+    <title>Starbucks Coffee Korea</title>
+
+    <!-- Style -->
     <link rel="icon" href="./favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="./css/main.css">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Starbucks" />
+    <meta property="og:title" content="Starbucks Coffee Korea" />
+    <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+    <meta property="og:image" content="./images/starbucks_seo.jpg" />
+    <meta property="og:url" content="https://starbucks.co.kr" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="Starbucks" />
+    <meta property="twitter:title" content="Starbucks Coffee Korea" />
+    <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+    <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
+    <meta property="twitter:url" content="https://starbucks.co.kr" />
+    
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
-    Hello World !    
+    <!-- Header -->
+    <header>
+      <div class="inner">
+        <a href="/" class="logo">
+          <img src="./images/starbucks_logo.png" alt="STARBUCKS">
+        </a>
+
+        <div class="sub-menu">
+          <ul class="menu">
+            <li><a href="javascript:void()">Sign In</a></li>
+            <li><a href="javascript:void()">My Starbucks</a></li>
+            <li><a href="javascript:void()">Customer Service & Ideas</a></li>
+            <li><a href="javascript:void()">Find a Store</a></li>
+          </ul>
+          <div class="search">
+            <input type="text">
+            <div class="material-icons">search</div>
+          </div>
+        </div>
+      </div>
+
+    </header>
   </body>
 </html>
