--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
     <meta property="twitter:url" content="https://starbucks.co.kr" />
     
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.11.5/dist/gsap.min.js"></script>
     <script defer src="./js/main.js"></script>
   </head>
   <body>
@@ -39,7 +41,6 @@
         <a href="/" class="logo">
           <img src="./images/starbucks_logo.png" alt="STARBUCKS">
         </a>
-
         <div class="sub-menu">
           <ul class="menu">
             <li><a href="javascript:void()">Sign In</a></li>
@@ -55,7 +56,6 @@
 
         </div>
         <!-- sub-menu -->
-
         <ul class="main-menu">
           <li class="item">
             <div class="item__name">COFFEE</div>
@@ -355,9 +355,19 @@
           </li>
         </ul>
         <!-- main-menu -->
-
       </div>
       <!-- inner -->
+
+      <div class="badges">
+        <div class="badge">
+          <img src="./images/badge1.jpg" alt="Badge">
+        </div>
+        <div class="badge">
+          <img src="./images/badge2.jpg" alt="Badge">
+        </div>
+      </div>
     </header>
+
+    
   </body>
 </html>
