--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main.css">
 
     <!-- Open Graph -->
@@ -36,7 +37,9 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.11.5/dist/gsap.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollToPlugin.min.js' integrity='sha512-WFeBxQtM/n6U8/Nd0Hz/Hq7n75NImbzM7Kc0y/4kE0kHnH1Be+nzm32RwbGoDsW1D9fjjPvI8LIWxLrZhxew/w==' crossorigin='anonymous'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script defer src="./js/youtube.js"></script>
+    <script defer src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
   </head>
   <body>
@@ -48,7 +51,7 @@
         </a>
         <div class="sub-menu">
           <ul class="menu">
-            <li><a href="javascript:void()">Sign In</a></li>
+            <li><a href="/signin/">Sign In</a></li>
             <li><a href="javascript:void()">My Starbucks</a></li>
             <li><a href="javascript:void()">Customer Service & Ideas</a></li>
             <li><a href="javascript:void()">Find a Store</a></li>
